# rick-and-morty

./: Cargo.toml  README.md
src/: api.rs  cli.rs  handle_calls.rs  main.rs  models.rs  proxy.rs  proxy_request_handler.rs  proxy_requests.rs  proxy_signup.rs
src/resources/: characters.rs  episodes.rs  locations.rs  mod.rs
tests/: benchmark_proxy.rs  character_test.rs
