[package]
name = "rick-and-morty"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.12"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
warp = "0.3"
serde_json = "1.0"
futures = "0.3"
uuid = {version = "1.7.0", features = ["v4", "fast-rng","macro-diagnostics"]}